Se suben cambios para swagger y connection string

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "connection": "Server=cupboard.database.windows.net; Database=cupboard;Persist Security Info=False;User ID=cupboarduser;Password=Abc.123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
