--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connection": "Server=MNB294\\SQLEXPRESS; Database=ProductsManagment; Trusted_Connection=true; MultipleActiveResultSets=true"
+    "connection": "Server=cupboard.database.windows.net; Database=cupboard;Persist Security Info=False;User ID=cupboarduser;Password=Abc.123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "Logging": {
     "LogLevel": {
