--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JWTConfiguracion": {
+    "securityKey": "CupBoardKey123456$789012<3456",
+    "validIssuer": "ApiProductManagment",
+    "validAudience": "https://localhost:5001",
+    "expiryInMinutes": 61200
+  },
+  "ConfiguracionEmail": {
+    "From": "no-reply@dominio.com",
+    "SmtpServer": "dominio.com",
+    "Port": 25,
+    "Username": "emailaddress@dominio.com",
+    "Password": "mypassword123456"
+  },
   "AllowedHosts": "*"
 }
